Fix spacing

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -22,7 +22,7 @@
   justify-content: center;
   font-family: "Lato", sans-serif;
   font-weight: 500;
-  line-height: 2.8vw;
+  line-height: 2vw;
   font-size: 1.2rem;  
 
 }
